--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.1",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.17.2",
+    "nodemon": "^3.1.10",
+    "react-icons": "^5.5.0"
   }
 }
