--- a/emp-hr/package.json
+++ b/emp-hr/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.7.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-geolocated": "^4.3.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5"
   },
