--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "nodemon": "^3.1.10",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "socket.io": "^4.8.1"
   }
 }
