--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1"
