--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
