--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.17.2",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
